work on PUT user endpoint
